--- a/src/templates/MainTemplate/styles.module.css
+++ b/src/templates/MainTemplate/styles.module.css
@@ -122,7 +122,7 @@
   }
 
   .appShell {
-    grid-template-columns: 1fr;
+    grid-template-columns: 0fr;
   }
 
   .main {
